--- a/data/interfaces/default/app_import.html
+++ b/data/interfaces/default/app_import.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-remove"></i></button>
-            <h4 class="modal-title">Import ${app} Database</h4>
+            <h4 class="modal-title">导入 ${app} 数据库</h4>
         </div>
         <div class="modal-body" id="modal-text">
             <form id="import_database_form" enctype="multipart/form-data" method="post" name="import_database_form">
