--- a/data/interfaces/default/configuration_table.html
+++ b/data/interfaces/default/configuration_table.html
@@ -32,15 +32,15 @@ DOCUMENTATION :: END
         % endif
         <tr>
             <td>配置文件:</td>
-            <td><a class="no-highlight" href="download_config" data-toggle="tooltip" data-placement="right" title="Download Configuration">${plexpy.CONFIG_FILE}</a></td>
+            <td><a class="no-highlight" href="download_config" data-toggle="tooltip" data-placement="right" title="下载配置">${plexpy.CONFIG_FILE}</a></td>
         </tr>
         <tr>
             <td>数据库文件:</td>
-            <td><a class="no-highlight" href="download_database" data-toggle="tooltip" data-placement="right" title="Download Database">${plexpy.DB_FILE}</a> | <a class="no-highlight" href="status/database">Status</a></td>
+            <td><a class="no-highlight" href="download_database" data-toggle="tooltip" data-placement="right" title="下载数据库">${plexpy.DB_FILE}</a> | <a class="no-highlight" href="status/database">Status</a></td>
         </tr>
         <tr>
             <td>日志文件:</td>
-            <td><a class="no-highlight" href="download_log" data-toggle="tooltip" data-placement="right" title="Download Log">${os.path.join(plexpy.CONFIG.LOG_DIR, logger.FILENAME)}</a></td>
+            <td><a class="no-highlight" href="download_log" data-toggle="tooltip" data-placement="right" title="下载日志">${os.path.join(plexpy.CONFIG.LOG_DIR, logger.FILENAME)}</a></td>
         </tr>
         <tr>
             <td>备份目录:</td>
