--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -29,12 +29,12 @@
             </div>
             <div class="input-group pull-right" style="width: 1px;" id="days-selection">
                 <span class="input-group-addon btn-dark inactive">最近</span>
-                <input type="number" class="form-control number-input" name="graph-days" id="graph-days" value="30" min="1" data-default="7" data-toggle="tooltip" title="Min: 1 day" />
+                <input type="number" class="form-control number-input" name="graph-days" id="graph-days" value="30" min="1" data-default="7" data-toggle="tooltip" title="最小1天" />
                 <span class="input-group-addon btn-dark inactive">天</span>
             </div>
             <div class="input-group pull-right" style="width: 1px;" id="months-selection">
                 <span class="input-group-addon btn-dark inactive">最近</span>
-                <input type="number" class="form-control number-input" name="graph-months" id="graph-months" value="12" min="1" data-default="12" data-toggle="tooltip" title="Min: 1 month" />
+                <input type="number" class="form-control number-input" name="graph-months" id="graph-months" value="12" min="1" data-default="12" data-toggle="tooltip" title="最小1月" />
                 <span class="input-group-addon btn-dark inactive">月</span>
 			</div>
         </div>
