--- a/data/interfaces/default/history.html
+++ b/data/interfaces/default/history.html
@@ -77,7 +77,7 @@
                 <th align="left" id="friendly_name">用户</th>
                 <th align="left" id="ip_address">IP地址</th>
                 <th align="left" id="platform">平台</th>
-                <th align="left" id="product">产品</th>
+                <th align="left" id="product">软件</th>
                 <th align="left" id="player">播放器</th>
                 <th align="left" id="title">标题</th>
                 <th align="left" id="started">开始</th>
@@ -274,7 +274,7 @@
                 $(this).tooltip({
                     container: '.body-container',
                     placement: 'bottom',
-                    title: 'Select rows to delete. Data is deleted upon exiting delete mode.',
+                    title: '选择要删除的行。数据将在退出删除模式时被删除。',
                     trigger: 'manual'
                 }).tooltip('show');
 
