--- a/data/interfaces/default/history_table_modal.html
+++ b/data/interfaces/default/history_table_modal.html
@@ -21,18 +21,18 @@
             <table class="display history_table" id="history_table_modal" width="100%">
                 <thead>
                 <tr>
-                    <th align="left" id="delete_row">Delete</th>
-                    <th align="left" id="date">Date</th>
-                    <th align="left" id="friendly_name">User</th>
-                    <th align="left" id="ip_address">IP Address</th>
-                    <th align="left" id="platform">Platform</th>
-                    <th align="left" id="product">Product</th>
-                    <th align="left" id="device">Player</th>
-                    <th align="left" id="title">Title</th>
-                    <th align="left" id="started">Started</th>
-                    <th align="left" id="paused_counter">Paused</th>
-                    <th align="left" id="stopped">Stopped</th>
-                    <th align="left" id="play_duration">Duration</th>
+                    <th align="left" id="delete_row">删除</th>
+                    <th align="left" id="date">日期</th>
+                    <th align="left" id="friendly_name">用户</th>
+                    <th align="left" id="ip_address">IP地址</th>
+                    <th align="left" id="platform">平台</th>
+                    <th align="left" id="product">软件</th>
+                    <th align="left" id="device">播放器</th>
+                    <th align="left" id="title">标题</th>
+                    <th align="left" id="started">开始</th>
+                    <th align="left" id="paused_counter">暂停</th>
+                    <th align="left" id="stopped">停止</th>
+                    <th align="left" id="play_duration">时长</th>
                     <th align="left" id="percent_complete"></th>
                 </tr>
                 </thead>
