--- a/data/interfaces/default/index.html
+++ b/data/interfaces/default/index.html
@@ -17,7 +17,7 @@
                         <span id="currentActivityHeader" style="display: none;">
                             会话: <span id="currentActivityHeader-streams"></span> |
                             带宽: <span id="currentActivityHeader-bandwidth"></span>
-                            <span id="currentActivityHeader-bandwidth-tooltip" data-toggle="tooltip" title="Streaming Brain Estimate (Reserved Bandwidth)"><i class="fa fa-info-circle"></i></span>
+                            <span id="currentActivityHeader-bandwidth-tooltip" data-toggle="tooltip" title="流媒体估算（预留带宽）"><i class="fa fa-info-circle"></i></span>
                         </span>
                     </small>
                 </h3>
