--- a/data/interfaces/default/info_search_results_list.html
+++ b/data/interfaces/default/info_search_results_list.html
@@ -69,7 +69,7 @@ DOCUMENTATION :: END
                 <div class="item-children-poster">
                     <div class="item-children-poster-face poster-item" style="background-image: url(${page('pms_image_proxy', child['thumb'], child['rating_key'], 300, 450, fallback='poster')});"></div>
                     % if _session['user_group'] == 'admin':
-                    <span class="overlay-refresh-image" title="Refresh image"><i class="fa fa-refresh refresh_pms_image"></i></span>
+                    <span class="overlay-refresh-image" title="刷新图像"><i class="fa fa-refresh refresh_pms_image"></i></span>
                     % endif
                 </div>
                 <div class="item-children-instance-text-wrapper poster-item">
