--- a/data/interfaces/default/library_recently_added.html
+++ b/data/interfaces/default/library_recently_added.html
@@ -65,7 +65,7 @@ DOCUMENTATION :: END
                             </div>
                         </div>
                         % if _session['user_group'] == 'admin':
-                        <span class="overlay-refresh-image" title="Refresh image"><i class="fa fa-refresh refresh_pms_image"></i></span>
+                        <span class="overlay-refresh-image" title="刷新图像"><i class="fa fa-refresh refresh_pms_image"></i></span>
                         % endif
                     </div>
                 </a>
