--- a/data/interfaces/default/logs.html
+++ b/data/interfaces/default/logs.html
@@ -58,11 +58,11 @@
                     </select>
                 </label>
             </div>
-            <button class="btn btn-dark" id="download-tautullilog"><i class="fa fa-download"></i> Download logs</button>
-            <button class="btn btn-dark" id="download-plexserverlog" style="display: none;"><i class="fa fa-download"></i> Download logs</button>
-            <button class="btn btn-dark" id="clear-notify-logs" style="display: none;"><i class="fa fa-trash-o"></i> Clear logs</button>
-            <button class="btn btn-dark" id="clear-newsletter-logs" style="display: none;"><i class="fa fa-trash-o"></i> Clear logs</button>
-            <button class="btn btn-dark" id="clear-login-logs" style="display: none;"><i class="fa fa-trash-o"></i> Clear logs</button>
+            <button class="btn btn-dark" id="download-tautullilog"><i class="fa fa-download"></i> 下载日志</button>
+            <button class="btn btn-dark" id="download-plexserverlog" style="display: none;"><i class="fa fa-download"></i> 下载日志</button>
+            <button class="btn btn-dark" id="clear-notify-logs" style="display: none;"><i class="fa fa-trash-o"></i> 清除日志</button>
+            <button class="btn btn-dark" id="clear-newsletter-logs" style="display: none;"><i class="fa fa-trash-o"></i> 清除日志</button>
+            <button class="btn btn-dark" id="clear-login-logs" style="display: none;"><i class="fa fa-trash-o"></i> 清除日志</button>
         </div>
     </div>
     <div class='table-card-back'>
@@ -81,9 +81,9 @@
                     <table class="display" id="tautulli_log_table" width="100%">
                         <thead>
                             <tr>
-                                <th class="min-tablet" align="left" id="timestamp">Timestamp</th>
-                                <th class="desktop" align="left" id="level">Level</th>
-                                <th class="all" align="left" id="message">Message</th>
+                                <th class="min-tablet" align="left" id="timestamp">时间戳</th>
+                                <th class="desktop" align="left" id="level">级别</th>
+                                <th class="all" align="left" id="message">消息</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
@@ -93,9 +93,9 @@
                     <table class="display" id="tautulli_api_log_table" width="100%">
                         <thead>
                             <tr>
-                                <th class="min-tablet" align="left" id="timestamp">Timestamp</th>
-                                <th class="desktop" align="left" id="level">Level</th>
-                                <th class="all" align="left" id="message">Message</th>
+                                <th class="min-tablet" align="left" id="timestamp">时间戳</th>
+                                <th class="desktop" align="left" id="level">级别</th>
+                                <th class="all" align="left" id="message">消息</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
@@ -105,9 +105,9 @@
                     <table class="display" id="plex_websocket_log_table" width="100%">
                         <thead>
                             <tr>
-                                <th class="min-tablet" align="left" id="timestamp">Timestamp</th>
-                                <th class="desktop" align="left" id="level">Level</th>
-                                <th class="all" align="left" id="message">Message</th>
+                                <th class="min-tablet" align="left" id="timestamp">时间戳</th>
+                                <th class="desktop" align="left" id="level">级别</th>
+                                <th class="all" align="left" id="message">消息</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
@@ -117,9 +117,9 @@
                     <table class="display" id="plex_log_table" width="100%">
                         <thead>
                             <tr>
-                                <th align="left" id="plex_timestamp">Timestamp</th>
-                                <th align="left" id="plex_level">Level</th>
-                                <th align="left" id="plex_message">Message</th>
+                                <th align="left" id="plex_timestamp">时间戳</th>
+                                <th align="left" id="plex_level">级别</th>
+                                <th align="left" id="plex_message">消息</th>
                             </tr>
                         </thead>
                         <tbody></tbody>
