--- a/data/interfaces/default/newsletter_auth.html
+++ b/data/interfaces/default/newsletter_auth.html
@@ -37,7 +37,7 @@
                                 </label>
                                 <input type="password" id="key" name="key" class="form-control" autofocus>
                             </div>
-                            <button id="enter" type="submit" class="btn btn-bright login-button"><i class="fa fa-sign-in"></i>&nbsp; Enter</button>
+                            <button id="enter" type="submit" class="btn btn-bright login-button"><i class="fa fa-sign-in"></i>&nbsp; 输入</button>
                         </form>
                     </div>
                 </div>
