--- a/data/interfaces/default/users.html
+++ b/data/interfaces/default/users.html
@@ -71,7 +71,7 @@
                 <p>这是永久性的，无法撤销！</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal">取消</button>
                 <button type="button" class="btn btn-danger btn-ok" data-dismiss="modal" id="confirm-delete">确认</button>
             </div>
         </div>
@@ -172,7 +172,7 @@
                 $(this).tooltip({
                     container: '.body-container',
                     placement: 'bottom',
-                    title: 'Select users to delete/purge. Data is deleted/purged upon exiting edit mode.',
+                    title: '选择要删除/清除的用户。数据将在退出编辑模式时被删除/清除。',
                     trigger: 'manual'
                 }).tooltip('show');
 
