--- a/data/interfaces/default/xml_shortcut.html
+++ b/data/interfaces/default/xml_shortcut.html
@@ -34,9 +34,9 @@
                             <input id="xml_url" class="form-control" type="text" value="${url}" />
                         </div>
                         <span class="remember-group">
-                            Sign in with Plex to view the XML
+                            使用 Plex 登录以查看 XML
                         </span>
-                        <button id="sign-in-plex" class="btn btn-bright login-button"><i class="fa fa-sign-in"></i>&nbsp; Sign In</button>
+                        <button id="sign-in-plex" class="btn btn-bright login-button"><i class="fa fa-sign-in"></i>&nbsp; 登录</button>
                     </div>
                 </div>
             </div>
