--- a/data/interfaces/default/base.html
+++ b/data/interfaces/default/base.html
@@ -76,7 +76,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">切换导航</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -203,7 +203,7 @@ ${next.modalIncludes()}
                 </div>
                 <div class="modal-footer">
                     <span id="sign-in-alert" style="padding-right: 25px; display: none;"></span>
-                    <button id="sign-in" type="submit" class="btn btn-bright login-button"><i class="fa fa-sign-in"></i>&nbsp; Sign In</button>
+                    <button id="sign-in" type="submit" class="btn btn-bright login-button"><i class="fa fa-sign-in"></i>&nbsp; 登录</button>
                 </div>
                 <input type="hidden" id="admin_login" name="admin_login" value="1" />
             </form>
@@ -304,14 +304,14 @@ ${next.modalIncludes()}
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-remove"></i></button>
-                <h4 class="modal-title">Confirm</h4>
+                <h4 class="modal-title">确认</h4>
             </div>
             <div class="modal-body">
                 <div id="confirm-message" style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal">取消</button>
                 <button type="button" class="btn btn-danger btn-ok" data-dismiss="modal" id="confirm-button">确认</button>
             </div>
         </div>
