--- a/data/interfaces/default/ip_address_modal.html
+++ b/data/interfaces/default/ip_address_modal.html
@@ -5,9 +5,9 @@
             <h4 class="modal-title" id="myModalLabel">
                 <strong><span id="modal_header_ip_address">
                     % if data:
-                    <i class="fa fa-map-marker"></i> IP Address: ${data}
+                    <i class="fa fa-map-marker"></i> IP 地址: ${data}
                     % else:
-                    <i class="fa fa-exclamation-circle"></i> Invalid IP Address
+                    <i class="fa fa-exclamation-circle"></i> 无效 IP 地址
                     % endif
                 </span></strong>
             </h4>
