--- a/data/interfaces/default/update_metadata.html
+++ b/data/interfaces/default/update_metadata.html
@@ -176,13 +176,13 @@ DOCUMENTATION :: END
                 <p><span id="new_title"></span></p>
                 <p>from the <strong><span id="new_library"></span></strong> library?</p>
                 % if query['media_type'] != 'movie':
-                <p>All items for <strong>${query['grandparent_title']}</strong> will also be updated.</p>
+                <p>所有项目的 <strong>${query['grandparent_title']}</strong> 也将被更新。</p>
                 % endif
-                <p>This is permanent and cannot be undone!</p>
+                <p>这是永久性的，无法撤销！</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger btn-ok" data-dismiss="modal" id="confirm-update">Update</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-danger btn-ok" data-dismiss="modal" id="confirm-update">更新</button>
             </div>
         </div>
     </div>
