--- a/data/interfaces/default/user.html
+++ b/data/interfaces/default/user.html
@@ -191,7 +191,7 @@ DOCUMENTATION :: END
                                                 </label>
                                             </div>
                                             <div class="btn-group">
-                                                <button class="btn btn-dark refresh-history-button" id="refresh-history-list"><i class="fa fa-refresh"></i> Refresh history</button>
+                                                <button class="btn btn-dark refresh-history-button" id="refresh-history-list"><i class="fa fa-refresh"></i> 刷新历史记录</button>
                                             </div>
                                             <div class="btn-group colvis-button-bar" id="button-bar-history"></div>
                                         </div>
@@ -240,13 +240,13 @@ DOCUMENTATION :: END
                                                 <button class="btn btn-dark export-button" id="toggle-export-modal" data-toggle="modal" data-target="#export-modal"
                                                         data-user_id="${data['user_id']}" data-media_type="playlist" data-sub_media_type="video,audio,photo"
                                                         data-export_type="playlist">
-                                                    <i class="fa fa-file-export"></i> Export playlists
+                                                    <i class="fa fa-file-export"></i> 导出播放列表
                                                 </button>
                                             </div>
                                             % endif
                                             <div class="btn-group">
                                                 <button class="btn btn-dark refresh-playlists-table-button" id="refresh-playlists-table">
-                                                    <i class="fa fa-refresh"></i> Refresh playlists
+                                                    <i class="fa fa-refresh"></i> 刷新播放列表
                                                 </button>
                                             </div>
                                             <div class="btn-group colvis-button-bar" id="button-bar-playlists"></div>
@@ -256,9 +256,9 @@ DOCUMENTATION :: END
                                         <table class="display playlists_table" id="playlists_table-SID-${data['user_id']}" width="100%">
                                             <thead>
                                                 <tr>
-                                                    <th align="left" id="playlistTitle">Playlist Title</th>
-                                                    <th align="left" id="playlistLeafCount">Playlist Items</th>
-                                                    <th align="left" id="playlistDuration">Playlist Duration</th>
+                                                    <th align="left" id="playlistTitle">播放列表标题</th>
+                                                    <th align="left" id="playlistLeafCount">播放列表项目</th>
+                                                    <th align="left" id="playlistDuration">播放列表时长</th>
                                                 </tr>
                                             </thead>
                                             <tbody></tbody>
@@ -284,7 +284,7 @@ DOCUMENTATION :: END
                                         <div class="button-bar">
                                             <div class="btn-group">
                                                 <button class="btn btn-dark refresh-export-table-button" id="refresh-export-table">
-                                                    <i class="fa fa-refresh"></i> Refresh exports
+                                                    <i class="fa fa-refresh"></i> 刷新导出
                                                 </button>
                                             </div>
                                             <div class="btn-group colvis-button-bar" id="button-bar-export"></div>
@@ -294,17 +294,17 @@ DOCUMENTATION :: END
                                         <table class="display export_table" id="export_table-SID-${data['user_id']}" width="100%">
                                             <thead>
                                                 <tr>
-                                                    <th align="left" id="timestamp">Exported At</th>
-                                                    <th align="left" id="media_type_title">Media Type</th>
-                                                    <th align="left" id="rating_key">Rating Key</th>
-                                                    <th align="left" id="filename">Filename</th>
-                                                    <th align="left" id="file_format">File Format</th>
-                                                    <th align="left" id="metadata_level">Metadata Level</th>
-                                                    <th align="left" id="media_info_level">Media Info Level</th>
-                                                    <th align="left" id="media_info_level">Custom Fields</th>
-                                                    <th align="left" id="file_size">File Size</th>
-                                                    <th align="left" id="complete">Download</th>
-                                                    <th align="left" id="delete">Delete</th>
+                                                    <th align="left" id="timestamp">导出时间</th>
+                                                    <th align="left" id="media_type_title">媒体类型</th>
+                                                    <th align="left" id="rating_key">评级</th>
+                                                    <th align="left" id="filename">文件名</th>
+                                                    <th align="left" id="file_format">文件格式</th>
+                                                    <th align="left" id="metadata_level">元数据级别</th>
+                                                    <th align="left" id="media_info_level">媒体信息级别</th>
+                                                    <th align="left" id="media_info_level">自定义字段</th>
+                                                    <th align="left" id="file_size">文件大小</th>
+                                                    <th align="left" id="complete">下载</th>
+                                                    <th align="left" id="delete">删除</th>
                                                 </tr>
                                             </thead>
                                             <tbody></tbody>
@@ -845,7 +845,7 @@ DOCUMENTATION :: END
             $(this).tooltip({
                 container: '.body-container',
                 placement: 'bottom',
-                title: 'Select rows to delete. Data is deleted upon exiting delete mode.',
+                title: '选择要删除的行。数据将在退出删除模式时被删除。',
                 trigger: 'manual'
             }).tooltip('show');
 
@@ -894,7 +894,7 @@ DOCUMENTATION :: END
             $(this).tooltip({
                 container: '.body-container',
                 placement: 'bottom',
-                title: 'Select syncs to delete. Data is deleted upon exiting delete mode.',
+                title: '选择要删除的同步。数据将在退出删除模式时被删除。',
                 trigger: 'manual'
             }).tooltip('show');
 
